--- a/events/sensor.yaml
+++ b/events/sensor.yaml
@@ -1,44 +1,33 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Sensor
+kind: Workflow
 metadata:
-  name: webhook
+  generateName: nodejs-niha
+  labels:
+    workflows.argoproj.io/archive-strategy: "false"
 spec:
-  template:
-    container:
-      volumeMounts:
-        - mountPath: /git/nodejs-welcome
-          name: argoproj
-        - mountPath: /secret
-          name: sshkey
-        - mountPath: /etc/ssh
-          name: known-hosts
-    volumes:
-      - name: argoproj
-        emptyDir: {}
-      - name: sshkey
-        secret:
-          secretName: git-ssh
-      # The name of the key in the secret must be "ssh_known_hosts"
-      # Make sure you have your git provider added in the known hosts
-      # e.g. create the secret by running, kubectl -n argo-events create secret generic git-known-hosts --from-file=ssh_known_hosts=.ssh/known_hosts
-      - name: known-hosts
-        secret:
-          secretName: git-known-hosts
-    serviceAccountName: operate-workflow-sa
-  dependencies:
-    - name: test-dep
-      eventSourceName: webhook
-      eventName: example
-  triggers:
-    - template:
-        name: workflow-trigger
-        k8s:
-          operation: create
-          source:
-            git:
-              url: git@github.com:NiharikaNallabelli/argo.git
-              cloneDirectory: "/git/argoproj"
-              sshKeyPath: "/secret/key"
-              namespace: argo-events
-              filePath: "examples/workflow.yaml"
-              branch: "main"
+  entrypoint: hello
+  serviceAccountName: argo
+  volumes:
+    - name: kaniko-secret
+      secret:
+        secretName: regcred
+        items:
+          - key: .dockerconfigjson
+            path: config.json
+  templates:
+    - name: hello
+      dag:
+        tasks:
+          - name: build-container-image
+            templateRef:
+              name: container-image
+              template: build-kaniko-git
+              clusterScope: true
+            arguments:
+               parameters:
+                 - name: app_repo
+                   value: git://github.com/NiharikaNallabelli/nodejs-welcome.git
+                 - name: container_image
+                   value: niharika0606/nodejs-welcome
+                 - name: container_tag
+                   value: "1.1.0"
