--- a/events/event-source.yaml
+++ b/events/event-source.yaml
@@ -1,14 +1,30 @@
 apiVersion: argoproj.io/v1alpha1
 kind: EventSource
 metadata:
-  name: webhook
+  name: github
 spec:
   service:
     ports:
       - port: 12000
         targetPort: 12000
-  webhook:
-    devops-toolkit:
-      port: "12000"
-      endpoint: /nodejs-welcome
-      method: POST
+  github:
+    nodejs-welcome:
+      repositories:
+        - owner: NiharikaNallabelli
+          names:
+            - argo
+      webhook:
+        endpoint: /nodejs-welcome
+        port: "12000"
+        method: POST
+        url:  https://2cfe-183-82-115-199.ngrok.io
+      events:
+        - "*"
+      apiToken:
+        name: github-access
+        key: token
+      insecure: true
+      # Determines if notifications are sent when the webhook is triggered
+      active: true
+      # The media type used to serialize the payloads
+      contentType: json
