--- a/events/event-source.yaml
+++ b/events/event-source.yaml
@@ -8,7 +8,7 @@ spec:
       - port: 12000
         targetPort: 12000
   github:
-    nodejs-welcome:
+    example:
       repositories:
         - owner: NiharikaNallabelli
           names:
