--- a/events/event-source.yaml
+++ b/events/event-source.yaml
@@ -17,7 +17,7 @@ spec:
         endpoint: /nodejs-welcome
         port: "12000"
         method: POST
-        url:  https://2cfe-183-82-115-199.ngrok.io
+        url:   https://599c-183-82-115-199.ngrok.io
       events:
         - "*"
       apiToken:
